--- a/app/src/main/res/layout/fragment_passphrase.xml
+++ b/app/src/main/res/layout/fragment_passphrase.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:padding="16dp"
+  android:padding="@dimen/dialog_spacing"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   tools:context=".controller.PassphraseFragment">
 
@@ -13,6 +13,7 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/passphrase_key_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:hintEnabled="true"
@@ -28,6 +29,27 @@
         android:hint="@string/passphrase_key"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/passphrase_words_layout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/dialog_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/passphrase_key_layout"
+      app:layout_constraintStart_toStartOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/passphrase_words"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:lines="3"
+        android:hint="@string/passphrase_words"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 
 
